--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -10,6 +10,7 @@ collections:
     label: "Posts"
     folder: "src/posts"
     create: true
+    format: "json"
     slug: "{{slug}}"
     fields:
       - { name: "title", label: "Title", widget: "string" }
