--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -129,3 +129,36 @@ collections:
           - label: "Button text"
             name: "button_text"
             widget: "string"
+
+  - name: "Products"
+    label: "product_list"
+    files:
+      - file: "src/content/products/products.json"
+        label: "Products"
+        name: "product_list"
+        fields:
+          - label: "Product list"
+            name: "product_list"
+            widget: "list"
+            min: 3
+            fields:
+              - label: "Product Name"
+                name: "product_name"
+                widget: "string"
+              - label: "Product size"
+                name: "product_sizes"
+                fields:
+                  - label: "Product sizes"
+                    name: "product_sizes"
+                    widget: "list"
+                    min: 1
+                    max: 5
+              - label: "Product availability"
+                name: "product_available"
+                widget: "boolean"
+              - label: "Product price"
+                name: "product_price"
+                widget: "string"
+              - label: "Message button"
+                name: "message_text"
+                widget: "text"
