--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -145,6 +145,9 @@ collections:
               - label: "Product Name"
                 name: "product_name"
                 widget: "string"
+              - label: "Product image"
+                name: "product_image"
+                widget: "image"
               - label: "Product sizes"
                 name: "product_sizes"
                 widget: "list"
