--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: "public/"
+media_folder: "/public/uploads"
 public_folder: "/uploads"
 
 site_url: "https://admirable-syrniki-686715.netlify.app/"
